--- a/Assignment 5-6/a5_6/html/a5_6.html
+++ b/Assignment 5-6/a5_6/html/a5_6.html
@@ -48,7 +48,7 @@
     </div>
     <div id="outputWrapper" class="output">
     </div>
-    <div class="output"><button id="new_offence">Process New Offence</button></div>
+    <div class="output"><button id="new_offence">Process New Offence</button></div><br>
 
 </body>
 
